Case Docs CRUD operation
