# app/models/note.rb
@@ -6,6 +6,4 @@ class Note < ApplicationRecord
   belongs_to :hearing
 
   validates :content, presence: true
-
-  # delegate to hearing, hearing_type and case_participant
 end
